@juablafer - #5 - Comment related endpoints
* Implemented comment endpoints of reviews
